examples/test/testpolicy12689.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12689
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key11: value33
      key15: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value41
          key28: value24
          key44: value23
      podSelector:
        matchLabels:
          key17: value40
